--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <header>
+    <header class="md:container md:mx-auto">
       <!-- start of navbar -->
       <div class="navbar bg-base-100">
         <div class="flex-1">
@@ -191,6 +191,30 @@
           </div>
         </div>
       </section>
+
+      <!-- features bike this year -->
+      <section>
+        <h1 class="text-4xl font-bold text-center">
+          Fetured Bikes In This Year
+        </h1>
+        <p class="text-center text-xl font-bold text-orange-600 my-10">
+          Best bike collection
+        </p>
+        <section
+          class="features-bike my-10 ml-10 md:mx-5 flex flex-col gap-5 md:gap-28 md:flex-row"
+        >
+          <div>
+            <img src="images/others/latest1.png" alt="bike" />
+          </div>
+          <div>
+            <img src="images/others/latest2.png" alt="bike" />
+          </div>
+          <div>
+            <img src="images/others/latest3.png" alt="bike" />
+          </div>
+        </section>
+      </section>
+      <!-- end of features bike this year -->
     </main>
   </body>
 </html>
