--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           Best bike collection
         </p>
         <section
-          class="features-bike my-10 ml-10 md:mx-5 flex flex-col gap-5 md:gap-28 md:flex-row"
+          class="features-bike my-10 ml-10 flex flex-col gap-5 md:gap-28 md:flex-row"
         >
           <div>
             <img src="images/others/latest1.png" alt="bike" />
@@ -215,6 +215,57 @@
         </section>
       </section>
       <!-- end of features bike this year -->
+
+      <section class="latest-bike my-24">
+        <h1 class="text-4xl font-bold text-center">Latest News</h1>
+        <div class="flex flex-col md:flex-row gap-5 mx-5">
+          <div class="card card-compact bg-base-100 shadow-xl p-3">
+            <figure>
+              <img src="/images/slider/bike3.png" alt="Bike" />
+            </figure>
+            <div class="card-body space-y-5">
+              <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="">
+                <button class="btn btn-primary rounded-sm">Purchase</button>
+              </div>
+            </div>
+          </div>
+          <div class="card card-compact bg-base-100 shadow-xl p-3">
+            <figure>
+              <img src="/images/others/latest3.png" alt="Bike" />
+            </figure>
+            <div class="card-body space-y-5">
+              <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="">
+                <button class="btn btn-primary rounded-sm">Purchase</button>
+              </div>
+            </div>
+          </div>
+          <div class="card card-compact bg-base-100 shadow-xl p-3">
+            <figure>
+              <img src="/images/others/feature-bike.png" alt="Bike" />
+            </figure>
+            <div class="card-body space-y-5">
+              <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="">
+                <button class="btn btn-primary rounded-sm">Purchase</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
