--- a/index.html
+++ b/index.html
@@ -266,6 +266,140 @@
           </div>
         </div>
       </section>
+
+      <!-- happy clients say section -->
+      <section>
+        <h1 class="text-4xl font-bold text-center">
+          Happy <span class="text-orange-600">Clients says</span>
+        </h1>
+        <div class="grid grid-cols-1 ml-4 gap-4 md:ml-auto md:grid-cols-3">
+          <div class="card card-compact w-96 bg-base-100 shadow-xl">
+            <figure>
+              <img src="/images/others/user-1.png" class="w-1/3" alt="User" />
+            </figure>
+            <div class="card-body text-center space-y-4">
+              <p class="text-gray-600 px-6 ml-3">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <p>Roger</p>
+              <p>Banker</p>
+            </div>
+          </div>
+          <div class="card card-compact w-96 bg-base-100 shadow-xl">
+            <figure>
+              <img src="/images/others/user-3.png" class="w-1/3" alt="User" />
+            </figure>
+            <div class="card-body text-center space-y-4">
+              <p class="text-gray-600 px-6 ml-3">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <p>Roger</p>
+              <p>Banker</p>
+            </div>
+          </div>
+          <div class="card card-compact w-96 bg-base-100 shadow-xl">
+            <figure>
+              <img src="/images/others/user-2.png" class="w-1/3" alt="User" />
+            </figure>
+            <div class="card-body text-center space-y-4">
+              <p class="text-gray-600 px-6 ml-3">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <p>Roger</p>
+              <p>Banker</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end of happy clients say section -->
     </main>
   </body>
 </html>
