--- a/index.html
+++ b/index.html
@@ -400,6 +400,63 @@
         </div>
       </section>
       <!-- end of happy clients say section -->
+      <!-- frequenty asked questions -->
+      <section class="my-12">
+        <h1 class="text-4xl text-center">
+          Frequently <span class="text-orange-600">Asked Questions</span>
+        </h1>
+        <div class="mx-12 my-6 flex flex-col md:flex-row gap-6 items-center">
+          <div>
+            <img src="images/others/faq.png" alt="asked" srcset="" />
+          </div>
+          <div class="mx-7 my-3">
+            <div class="collapse collapse-plus bg-base-200 my-4">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                What are the most important things I should know about riding a
+                bike?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Safety First! Always obey the rules of the road. Obey all
+                  traffic signals, signs, and laws. Get in the mindset of
+                  “driving” your bike—not just “riding” your bike. This will
+                  help you be a more focused and legally compliant bike rider.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 my-4">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Safety First! Always obey the rules of the road. Obey all
+                  traffic signals, signs, and laws. Get in the mindset of
+                  “driving” your bike—not just “riding” your bike. This will
+                  help you be a more focused and legally compliant bike rider.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 my-4">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Safety First! Always obey the rules of the road. Obey all
+                  traffic signals, signs, and laws. Get in the mindset of
+                  “driving” your bike—not just “riding” your bike. This will
+                  help you be a more focused and legally compliant bike rider.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end of frequenty asked questions -->
     </main>
   </body>
 </html>
