--- a/index.html
+++ b/index.html
@@ -460,16 +460,18 @@
     </main>
 
     <footer
-      class="footer flex items-center justify-between footer-center p-10 bg-base-200 text-base-content rounded"
+      class="footer flex items-center justify-between footer-center md:p-10 bg-base-200 text-base-content rounded"
     >
-      <nav class="grid grid-flow-col gap-4 text-gray-500">
+      <nav
+        class="grid text-white grid-cols-2 gap-7 md:grid-flow-col md:gap-4 text-gray-500"
+      >
         <a class="link link-hover">About us</a>
         <a class="link link-hover">Contact</a>
         <a class="link link-hover">Features</a>
         <a class="link link-hover">Services</a>
       </nav>
       <div class="grid gap-4">
-        <h4 class="text-1xl text-gray-800 font-bold">Get The App</h4>
+        <h4 class="text-1xl mt-2 text-gray-50 font-bold">Get The App</h4>
         <img
           src="images/others/android.png"
           class="w-1/2"
