--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
       <!-- happy clients say section -->
       <section>
-        <h1 class="text-4xl font-bold text-center">
+        <h1 class="text-4xl font-bold text-center my-12">
           Happy <span class="text-orange-600">Clients says</span>
         </h1>
         <div class="grid grid-cols-1 ml-4 gap-4 md:ml-auto md:grid-cols-3">
