--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </button>
               </div>
               <div class="flex-1">
-                <img src="/images/slider/bike1.png" class="w-3/4" />
+                <img src="./images/slider/bike1.png" class="w-3/4" />
               </div>
             </div>
             <div
@@ -221,7 +221,7 @@
         <div class="flex flex-col md:flex-row gap-5 mx-5">
           <div class="card card-compact bg-base-100 shadow-xl p-3">
             <figure>
-              <img src="/images/slider/bike3.png" alt="Bike" />
+              <img src="/images/slider/bike1.png" alt="Bike" />
             </figure>
             <div class="card-body space-y-5">
               <h2 class="card-title">Ducati XDIAVEL S-73</h2>
@@ -236,7 +236,7 @@
           </div>
           <div class="card card-compact bg-base-100 shadow-xl p-3">
             <figure>
-              <img src="/images/others/latest3.png" alt="Bike" />
+              <img src="/images/slider/bike2.png" alt="Bike" />
             </figure>
             <div class="card-body space-y-5">
               <h2 class="card-title">Ducati XDIAVEL S-73</h2>
