--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </button>
               </div>
               <div class="flex-1">
-                <img src="./images/slider/bike1.png" class="w-3/4" />
+                <img src="images/slider/bike1.png" class="w-3/4" />
               </div>
             </div>
             <div
@@ -123,7 +123,7 @@
                 </button>
               </div>
               <div class="flex-1">
-                <img src="/images/slider/bike2.png" class="w-3/4" />
+                <img src="images/slider/bike2.png" class="w-3/4" />
               </div>
             </div>
             <div
@@ -151,7 +151,7 @@
                 </button>
               </div>
               <div class="flex-1">
-                <img src="/images/slider/bike1.png" class="w-3/4" />
+                <img src="images/slider/bike1.png" class="w-3/4" />
               </div>
             </div>
             <div
@@ -179,7 +179,7 @@
                 </button>
               </div>
               <div class="flex-1">
-                <img src="/images/slider/bike4.png" class="w-3/4" />
+                <img src="images/slider/bike4.png" class="w-3/4" />
               </div>
             </div>
             <div
@@ -221,7 +221,7 @@
         <div class="flex flex-col md:flex-row gap-5 mx-5">
           <div class="card card-compact bg-base-100 shadow-xl p-3">
             <figure>
-              <img src="/images/slider/bike1.png" alt="Bike" />
+              <img src="images/slider/bike1.png" alt="Bike" />
             </figure>
             <div class="card-body space-y-5">
               <h2 class="card-title">Ducati XDIAVEL S-73</h2>
@@ -236,7 +236,7 @@
           </div>
           <div class="card card-compact bg-base-100 shadow-xl p-3">
             <figure>
-              <img src="/images/slider/bike2.PNG" alt="Bike" />
+              <img src="images/slider/bike2.PNG" alt="Bike" />
             </figure>
             <div class="card-body space-y-5">
               <h2 class="card-title">Ducati XDIAVEL S-73</h2>
@@ -251,7 +251,7 @@
           </div>
           <div class="card card-compact bg-base-100 shadow-xl p-3">
             <figure>
-              <img src="/images/others/feature-bike.png" alt="Bike" />
+              <img src="images/others/feature-bike.png" alt="Bike" />
             </figure>
             <div class="card-body space-y-5">
               <h2 class="card-title">Ducati XDIAVEL S-73</h2>
@@ -275,7 +275,7 @@
         <div class="grid grid-cols-1 ml-4 gap-4 md:ml-auto md:grid-cols-3">
           <div class="card card-compact w-96 bg-base-100 shadow-xl">
             <figure>
-              <img src="/images/others/user-1.png" class="w-1/3" alt="User" />
+              <img src="images/others/user-1.png" class="w-1/3" alt="User" />
             </figure>
             <div class="card-body text-center space-y-4">
               <p class="text-gray-600 px-6 ml-3">
@@ -317,7 +317,7 @@
           </div>
           <div class="card card-compact w-96 bg-base-100 shadow-xl">
             <figure>
-              <img src="/images/others/user-3.png" class="w-1/3" alt="User" />
+              <img src="images/others/user-3.png" class="w-1/3" alt="User" />
             </figure>
             <div class="card-body text-center space-y-4">
               <p class="text-gray-600 px-6 ml-3">
@@ -358,7 +358,7 @@
           </div>
           <div class="card card-compact w-96 bg-base-100 shadow-xl">
             <figure>
-              <img src="/images/others/user-2.png" class="w-1/3" alt="User" />
+              <img src="images/others/user-2.png" class="w-1/3" alt="User" />
             </figure>
             <div class="card-body text-center space-y-4">
               <p class="text-gray-600 px-6 ml-3">
