--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
           </div>
           <div class="card card-compact bg-base-100 shadow-xl p-3">
             <figure>
-              <img src="images/slider/bike2.PNG" alt="Bike" />
+              <img src="images/slider/bike2.png" alt="Bike" />
             </figure>
             <div class="card-body space-y-5">
               <h2 class="card-title">Ducati XDIAVEL S-73</h2>
